k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: temple
  labels:
    app.kubernetes.io/part-of: shree-lakshmi-venkateswara-temple
